hosting/k8s-database/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: database
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: d
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: spring-boot-version-one
    app.openshift.io/runtime-version: latest
  name: database
  namespace: cic-controlbook-dev
spec:
  type: ClusterIP
  ports:
    - name: 5432-tcp
      port: 5432
      protocol: 5432
  selector:
    app: databse
